@@ -11,7 +11,6 @@ license             = Perl_5
 
 [@Author::ETHER]
 :version = 0.049
-server = gitmo
 Authority.authority = cpan:NUFFIN
 Test::MinimumVersion.max_target_perl = 5.008003
 -remove = PodWeaver
